# some-glade-thing3

./: .gitignore  ExtraMakefile  Makefile.am  README.md  configure.ac
data/: Makefile.am
data/glade/: Makefile.am
data/text/: Makefile.am  hello.txt
doc/: some-glade-thing3.1  some-glade-thing3.texi
src/: Makefile.am  example_gtk_sqlite_main.c  main.c
